Fri Jan 09 21:54:34 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc: Fix incorrect code which just
	  happens to build and work with GCC 2.95.

Fri Jan 09 14:40:00 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc: Tidied the initial call to
	  get_chunk() out of the merge loop (gives ~4% speedup!)

Fri Jan 09 01:31:05 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc: Implement chunking of postlists
	  once again.

Thu Jan 08 21:06:37 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc: Shortcut the very common case
	  of appending to a posting list (which happens when we're just
	  adding new documents).  Declare small helper functions as "inline".

Wed Jan 07 23:21:59 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_database.cc: Set threshold for flushing to
	  a saner value for the value we are now using.
	* backends/quartz/: Use freq_deltas to update the stats in the first
	  chunk of each postlist.

Mon Jan 05 16:00:07 GMT 2004  Olly Betts <olly@survex.com>

	* include/xapian/enquire.h: Made the TradWeight constructor explicit.
	  This is technically an API change as before you could pass a
	  double where a Xapian::Weight was required - now you must pass
	  Xapian::TradWeight(2.0) instead of 2.0.  That seems desirable, and
	  it's unlikely any existing code will be affected.

Mon Jan 05 15:08:26 GMT 2004  Olly Betts <olly@survex.com>

	* include/xapian/: Added "explicit" qualifier to internal ctors
	  which take a single parameter.

Mon Jan 05 15:04:12 GMT 2004  Olly Betts <olly@survex.com>

	* include/xapian/base.h: Assigning a normal pointer to a RefCntPtr no
	  longer creates a temporary RefCntPtr from it.

Thu Dec 25 05:49:03 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc: Changed to merge a batch of
	  changes into a posting list in one pass.
